# Web_HW7

./: .gitignore  Dockerfile  alembic.ini  config.ini  pyproject.toml
conf/: conect.py  models.py
migrations/: env.py
migrations/versions/: 03a6dc5fd377_init_v_1_3.py  0768f834e891_init_v_1_4.py  59db1e04db11_init_v_1_1.py  85ff59265966_init_v_1_6.py  8e5b73684a34_init_v_1_0.py  a7e6035eb7d6_init.py  d4196a37302e_init_v_1_2.py  d698012116c6_init_v_1_5.py
queries/: select_1.py  select_10.py  select_11.py  select_12.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py
seeds/: init.py
