[tool.poetry]
name = "web-hw7"
version = "0.1.0"
description = ""
authors = ["Dmitriy <kylishovdimka@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.28"
poetry = "^1.8.2"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
faker = "^24.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
